opam-version: "1.2"
name: "bittrex"
version: "1.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-bittrex"
bug-reports: "https://github.com/vbmithr/ocaml-bittrex/issues"
dev-repo: "git://github.com/vbmithr/ocaml-bittrex"

available: [
  ocaml-version >= "4.02.0"
]

build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
depends: [
  "jbuilder" {build & >= "1.0+beta11"}
  "ptime" {>= "0.8.3"}
  "uuidm" {>= "0.9.6"}
  "ocplib-json-typed" {>= "0.5"}
]